tag v2.0.6，修复bug，优化代码